--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 body {
-  scrollbar-color: #4B5563 #1F2937;
+  scrollbar-color: #4b5563 #1f2937;
 }
